Update index.html via editor

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                     </div>
                     
                     <div class="flex flex-col sm:flex-row gap-4">
-                        <a href="https://shorturl.at/4bZd9//gmail.com" class="btn-primary text-center">Get Early Access</a>
+                        <a href="https://forms.gle/pKyvGrPKSkTX8qEu7" class="btn-primary text-center">Get Early Access</a>
                         <button class="px-8 py-3 rounded-full border-2 border-[#5B4BFF] text-[#5B4BFF] font-semibold hover:bg-[#5B4BFF] hover:text-white transition-all duration-300 hover:scale-105">
                             Learn More
                         </button>
